deploy/gateway-api/base/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-demo
  annotations: null
spec:
  type: ClusterIP
  externalTrafficPolicy: null
  loadBalancerSourceRanges: null
